api/.kube/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: resflow
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          imagePullPolicy: Always
          image: registry.resflow.ru/api:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: resflow
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: resflow
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: public
  tls:
    - secretName: api.resflow.ru-tls
      hosts:
        - api.resflow.ru
  rules:
    - host: api.resflow.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
